<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>run.mone</groupId>
        <artifactId>jcommon</artifactId>
        <version>1.4-jdk20-SNAPSHOT</version>
    </parent>

    <artifactId>docean-spring-starter</artifactId>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <springboot.version>2.7.15</springboot.version>
        <spring.version>5.3.29</spring.version>
    </properties>


    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${springboot.version}</version>
            <scope>provided</scope>
        </dependency>


        <dependency>
            <groupId>run.mone</groupId>
            <artifactId>docean</artifactId>
            <version>1.4-java20-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>


    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-modules=jdk.incubator.concurrent</arg>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <compilerVersion>20</compilerVersion>
                    <source>20</source>
                    <target>20</target>
                </configuration>
            </plugin>


        </plugins>


    </build>



</project>